[gd_scene load_steps=12 format=3 uid="uid://cup1vbnn124g5"]

[ext_resource type="Script" path="res://src/UI/Body/Scripts/global_styles_docker.gd" id="1_06ncl"]
[ext_resource type="PackedScene" uid="uid://sjcihdv8ggt4" path="res://src/UI/Components/tab.tscn" id="2_xvxh8"]
[ext_resource type="PackedScene" uid="uid://cmh5xibsddwbr" path="res://src/UI/Body/GlobalStyles/outlines_container.tscn" id="3_mkruu"]
[ext_resource type="PackedScene" uid="uid://k3k22bogbqny" path="res://src/UI/Body/GlobalStyles/motion_blur_container.tscn" id="4_4m5px"]
[ext_resource type="PackedScene" uid="uid://0rbs464xcygo" path="res://src/UI/Body/GlobalStyles/blur_container.tscn" id="5_8h8px"]
[ext_resource type="PackedScene" uid="uid://bbv84tiujqf65" path="res://src/UI/Body/GlobalStyles/perspective_container.tscn" id="6_whsns"]
[ext_resource type="PackedScene" uid="uid://dq40ndffxhokl" path="res://src/UI/Body/GlobalStyles/gradient_container.tscn" id="7_8vgse"]
[ext_resource type="PackedScene" uid="uid://gb37yfjyshkt" path="res://src/UI/Body/GlobalStyles/mask_container.tscn" id="8_cwtoj"]
[ext_resource type="PackedScene" uid="uid://dqa40gey6genb" path="res://src/UI/Body/GlobalStyles/path_container.tscn" id="9_1cfok"]
[ext_resource type="PackedScene" uid="uid://dn56cyfy3akar" path="res://src/UI/Body/GlobalStyles/pattern_container.tscn" id="9_uf0gr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trae7"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.365, 0.365, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 1

[node name="KEY_STYLES" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelX"
script = ExtResource("1_06ncl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Outline" parent="VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer" node_paths=PackedStringArray("content") instance=ExtResource("2_xvxh8")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_trae7")
content = NodePath("../../../../MarginContainer2/OutlinesContainer")
theme_type = "TabStyle"

[node name="MotionBlur" parent="VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer" node_paths=PackedStringArray("content") instance=ExtResource("2_xvxh8")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_trae7")
content = NodePath("../../../../MarginContainer2/MotionBlurContainer")
theme_type = "TabStyle"

[node name="Blur" parent="VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer" node_paths=PackedStringArray("content") instance=ExtResource("2_xvxh8")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_trae7")
content = NodePath("../../../../MarginContainer2/BlurContainer")
theme_type = "TabStyle"

[node name="Perspective" parent="VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer" node_paths=PackedStringArray("content") instance=ExtResource("2_xvxh8")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_trae7")
content = NodePath("../../../../MarginContainer2/PerspectiveContainer")
theme_type = "TabStyle"

[node name="Gradient" parent="VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer" node_paths=PackedStringArray("content") instance=ExtResource("2_xvxh8")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_trae7")
content = NodePath("../../../../MarginContainer2/GradientContainer")
theme_type = "TabStyle"

[node name="Mask" parent="VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer" node_paths=PackedStringArray("content") instance=ExtResource("2_xvxh8")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_trae7")
content = NodePath("../../../../MarginContainer2/MaskContainer")
theme_type = "TabStyle"

[node name="Pattern" parent="VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer" node_paths=PackedStringArray("content") instance=ExtResource("2_xvxh8")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_trae7")
content = NodePath("../../../../MarginContainer2/PatternContainer")
theme_type = "TabStyle"

[node name="Path" parent="VBoxContainer/MarginContainer/VBoxContainer/HFlowContainer" node_paths=PackedStringArray("content") instance=ExtResource("2_xvxh8")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_trae7")
content = NodePath("../../../../MarginContainer2/PathContainer")
theme_type = "TabStyle"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="OutlinesContainer" parent="VBoxContainer/MarginContainer2" instance=ExtResource("3_mkruu")]
visible = false
layout_mode = 2

[node name="MotionBlurContainer" parent="VBoxContainer/MarginContainer2" instance=ExtResource("4_4m5px")]
visible = false
layout_mode = 2

[node name="BlurContainer" parent="VBoxContainer/MarginContainer2" instance=ExtResource("5_8h8px")]
visible = false
layout_mode = 2

[node name="PerspectiveContainer" parent="VBoxContainer/MarginContainer2" instance=ExtResource("6_whsns")]
visible = false
layout_mode = 2

[node name="GradientContainer" parent="VBoxContainer/MarginContainer2" instance=ExtResource("7_8vgse")]
visible = false
layout_mode = 2

[node name="MaskContainer" parent="VBoxContainer/MarginContainer2" instance=ExtResource("8_cwtoj")]
visible = false
layout_mode = 2

[node name="PatternContainer" parent="VBoxContainer/MarginContainer2" instance=ExtResource("9_uf0gr")]
visible = false
layout_mode = 2

[node name="PathContainer" parent="VBoxContainer/MarginContainer2" instance=ExtResource("9_1cfok")]
visible = false
layout_mode = 2
